name:                tex2png-hs
version:             0.3.0
synopsis:            Easily convert TeX and LaTeX to PNG images
description:         A Haskell port of Xyne's @tex2png@ tool. It is a
                     wrapper around @latex@ and @dvipng@ and provides
                     several options for modifying its behaviour, such
                     as cropping the whitespace around the content,
                     specifying the DPI, or inputting a full document.
license:             MIT
license-file:        LICENSE
author:              Amin Bandali
maintainer:          amin9@cse.yorku.ca
copyright:           2016 Amin Bandali, Software Engineering Lab, York University
category:            LaTeX
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TeX2PNG
  build-depends:       base >= 4.7 && < 5
                     , text
                     , filepath
                     , lens
                     , directory
                     , process
                     , process-extras
                     , mtl
                     , cryptohash-sha256
                     , bytestring
                     , base16-bytestring
                     , either
                     , cereal
                     , cereal-text
  ghc-options:         -Wall -fwarn-tabs -fwarn-unused-imports
  default-language:    Haskell2010

executable tex2png-hs
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       TH
  ghc-options:         -Wall -O2 -fwarn-tabs -fwarn-unused-imports
                       -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tex2png-hs
                     , text
                     , optparse-applicative
                     , optparse-text
                     , gitrev
                     , template-haskell
  default-extensions:  OverloadedStrings
  default-language:    Haskell2010

test-suite tex2png-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tex2png-hs
  ghc-options:         -Wall -fwarn-tabs -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aminb/tex2png-hs
